--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,6 @@
-project(ip_filter_lib)
-add_library(${PROJECT_NAME}
+add_library(ip_filter_lib
         ip_filter.cpp
 )
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
-
+target_include_directories(ip_filter_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_link_libraries(ip_filter_lib PRIVATE Boost::boost)
