--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,11 @@
-project(ip_filter)
-add_executable(${PROJECT_NAME}_test
+add_executable(ip_filter_test
         test_main.cpp
         test_ip_filter.cpp
 )
 
-
-target_link_libraries(${PROJECT_NAME}_test
+target_link_libraries(ip_filter_test
         PRIVATE
+        Boost::boost
         GTest::gtest
         GTest::gtest_main
         ${PROJECT_NAME}_lib
