--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Install cmake
+      - name: Install packets
         run: |
           sudo apt update
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
@@ -22,11 +22,7 @@ jobs:
           sudo apt install build-essential gcc-13 g++-13 cmake git gdb libgtest-dev libboost-all-dev -y
           sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 140 --slave /usr/bin/g++ g++ /usr/bin/g++-13
       - name: Build ip_filter
-        run: |
-          cmake . -DPROJECT_VERSION_PATCH=${{ github.run_number }}
-          cmake --build .
-          cmake --build . --target test
-          cmake --build . --target package
+        run: cmake --workflow --preset wsl-ci
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
