--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,3 @@
-find_package(GTest CONFIG REQUIRED)
-
 add_executable(${PROJECT_NAME}_test
         test_main.cpp
         test_ip_filter.cpp
@@ -7,7 +5,6 @@ add_executable(${PROJECT_NAME}_test
 
 target_link_libraries(${PROJECT_NAME}_test
         PRIVATE
-        Boost::system
         Boost::filesystem
         GTest::gtest
         GTest::gtest_main
@@ -16,23 +13,22 @@ target_link_libraries(${PROJECT_NAME}_test
 
 add_test(NAME ${PROJECT_NAME}_test COMMAND ${PROJECT_NAME}_test)
 
-set(TEST_FILES
-        ${CMAKE_SOURCE_DIR}/tests/files/ip_filter.tsv
-)
-
-add_custom_command(TARGET ${PROJECT_NAME}_test POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy ${TEST_FILES} ${CMAKE_BINARY_DIR}/tests
-        COMMENT "Copying test files to output directory"
-)
+set(TEST_FILES ${CMAKE_SOURCE_DIR}/tests/files/ip_filter.tsv)
 
 if (WINDOWS_SPECIFIC_FLAG)
-add_custom_command(
-    TARGET ${PROJECT_NAME}_test POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    $<TARGET_FILE:GTest::gtest>
-    $<TARGET_FILE:GTest::gtest_main>
-    $<TARGET_FILE:GTest::gmock>
-    $<TARGET_FILE:GTest::gmock_main>
-    ${CMAKE_BINARY_DIR}/tests/${CMAKE_BUILD_TYPE}
-)
+    add_custom_command(
+            TARGET ${PROJECT_NAME}_test POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            $<TARGET_FILE:GTest::gtest>
+            $<TARGET_FILE:GTest::gtest_main>
+            ${TEST_FILES}
+            ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
+    )
 endif ()
+
+add_custom_command(
+        TARGET ${PROJECT_NAME}_test POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        ${TEST_FILES}
+        ${CMAKE_CURRENT_BINARY_DIR}
+)
